fixing overflow issue

--- a/default.css
+++ b/default.css
@@ -59,6 +59,7 @@ h6 { font-size: 16px;}
 
 
 .s1{
+	display: block;
 	background-color: var(--mainColor);
 	border-bottom:1px solid var(--borderColor);
 	/* overflow: -moz-hidden-unscrollable; */
@@ -67,6 +68,7 @@ h6 { font-size: 16px;}
 }
 
 .s2{
+	display: block;
 	background-color: var(--secondaryColor);
 	border-bottom:1px solid var(--borderColor);
 	/* overflow:hidden; */
